<resources>
    <string name="app_name">DoMessanger</string>
    <string name="action_settings">Settings</string>
    <string name="logout">Logout</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="username">Username</string>
    <string name="email">Email Address</string>
    <string name="password">password</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="welcome">Welcome</string>
    <string name="chat">Chat</string>
    <string name="setting">Setting</string>
    <string name="account">Account Setting</string>
    <string name="searchUser">Search Users</string>
    <string name="testing">Testing Message</string>
    <string name="seen">Last Seen</string>


    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>