<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background1"
    tools:context=".RegisterActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.DoMessanger.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbarRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/blue"
            app:popupTheme="@style/Theme.DoMessanger.PopupOverlay">


        </androidx.appcompat.widget.Toolbar>


    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_centerInParent="true">

        <EditText
            android:id="@+id/usernameRegister"
            android:inputType="text"
            android:hint="@string/username"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </EditText>
        <EditText
            android:id="@+id/emailRegister"
            android:inputType="textEmailAddress"
            android:hint="@string/email"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:layout_width="match_parent"
            android:layout_marginTop="12dp"
            android:layout_height="wrap_content">

        </EditText>
        <EditText
            android:id="@+id/passRegister"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:layout_width="match_parent"
            android:layout_marginTop="12dp"
            android:layout_height="wrap_content">

        </EditText>
        <Button
            android:id="@+id/btnRegister"
            android:text="@string/register"
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_marginTop="18dp"
            android:background="@drawable/shapebtn"
            android:textStyle="bold"
            android:layout_height="wrap_content">

        </Button>

    </LinearLayout>

</RelativeLayout>